Changement des couleurs des textes blancs(Correction contrastes)

--- a/style.css
+++ b/style.css
@@ -780,16 +780,16 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #232323!important;
 }
 
 .btn-atomic-tangerine:hover {
-    background: #c27956!important;
-    color: #FFFFFF!important;
+    background: #F3976C!important;
+    color: #232323!important;
 }
 
 .ltc-white {
-    color: #FFFFFF!important;
+    color: #232323!important;
 }
 
 .ltc-white:hover {
@@ -801,7 +801,7 @@ h4 {
 }
 
 .ltc-atomic-tangerine:hover {
-    color: #c27956!important;
+    color: #F3976C!important;
 }
 
 .icon-dark-slate-blue {
